--- a/.github/workflows/helo.yaml
+++ b/.github/workflows/helo.yaml
@@ -1,4 +1,6 @@
+---
 name: hello-world
+# yamllint disable-line rule:truthy
 on: push
 jobs:
   build:
@@ -8,19 +10,19 @@ jobs:
         uses: actions/checkout@v3
       - name: use nodejs
         uses: actions/setup-node@v3
-        with: 
+        with:
           node-version: 18.x
       - run: npm install
       - run: npm run build
   test:
     needs: build
     runs-on: ubuntu-latest
-      steps:
+    steps:
       - name: checkout repository code
         uses: actions/checkout@v3
       - name: use nodejs
         uses: actions/setup-node@v3
-        with: 
+        with:
           node-version: 18.x
       - run: npm install
-      - run: npm run test  
+      - run: npm run test
